# bitui

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
bitui/: __main__.py  main.py  utils.py
bitui/controller/: app.py
bitui/core/: app.py  blockchain.py
bitui/network/: btc.py  rpc.py
bitui/rpc/: btc.py  client.py  error.py
bitui/screen/: controller.py  core.py  state.py
tests/network/: rpc_test.py
