[project]
name = "bitui"
version = "0.1.0"
description = "Bitcoin's blockchain TUI viewer"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["terminal", "TUI", "viewer"]
authors = [
  {name = "leoperegrino"},
]

dependencies = ["requests"]
classifiers = [
	"Environment :: Console :: Curses",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: User Interfaces",
	"Topic :: System :: Shells",
	"Topic :: Terminals",
]

[project.urls]
repository = "https://github.com/leoperegrino/bitui"

[project.scripts]
bitui = "bitui.main:main"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
